# ax-bi

./: .asf.yaml  .codecov.yml  .coveragerc  .dockerignore  .envrc.example  .flaskenv  .fossa.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .rat-excludes  AGENTS.md  BOUNDARY_REPORT.md  BUG_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GENAI_BI_ROADMAP.md  INSTALL.md  MANIFEST.in  Makefile  NOTICE  PORTS.md  PYTHON_STABILITY.md  README.md  RECOVERY_2.0.x.md  SECURITY.md  UPDATING.md  ax-bi-frontend  ax-code.json  docker-compose-axbi-build.yml  docker-compose-axbi.yml  docker-compose-image-tag.yml  docker-compose-light.yml  docker-compose-non-dev.yml  docker-compose.yml  dockerize.Dockerfile  pyproject.toml  pytest.ini  setup.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  sip.md
.github/workflows/: ax-bi-desktop-release.yml  ax-sdk.yml  (+58 more)
RELEASING/: README.md
ax-bi-core/: .gitignore  README.md  pyproject.toml
ax-bi-desktop/: .gitignore  LOCAL_RUNTIME.md  README.md  RELEASE.md  package-lock.json  package.json  tsconfig.json
ax-bi-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ax-bi-desktop/src-tauri/capabilities/: main.json
ax-bi-desktop/src-tauri/permissions/: app.toml
ax-bi-desktop/src-tauri/src/: deep_link.rs  local_runtime.rs  main.rs  navigation.rs  tray.rs
ax-bi-desktop/src-tauri/src/commands/: mod.rs
ax-bi-embedded-sdk/: CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
ax-bi-extensions-cli/: README.md  pyproject.toml
ax-bi-extensions-cli/src/axbi_extensions_cli/: cli.py  utils.py
ax-bi-extensions-cli/src/axbi_extensions_cli/templates/backend/: pyproject.toml.j2
ax-bi-extensions-cli/src/axbi_extensions_cli/templates/frontend/: package.json.j2  webpack.config.js.j2
ax-bi-extensions-cli/src/axbi_extensions_cli/templates/frontend/src/: index.tsx.j2
ax-bi-extensions-cli/tests/: conftest.py  test_cli_build.py  test_cli_bundle.py  test_cli_dev.py  test_cli_init.py  test_cli_update.py  test_cli_validate.py  test_name_transformations.py  test_templates.py  test_utils.py  utils.py
ax-bi-frontend/: babel.config.js  cypress_build.sh  eslint.config.minimal.js  jest.config.js  lerna.json  netlify.toml  oxlint.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.webpack.json  webpack.config.js  webpack.proxy-config.js
ax-bi-rust/: Cargo.toml  README.md
ax-bi-websocket/: Dockerfile  README.md  config.example.json  eslint.config.js  jest.config.js  package-lock.json  package.json
ax-docs/: desktop-app-strategy-report.md  genai-bi-adr.md  genai-bi-prd.md  genai-bi-tech-spec.md  ux-simplification-adr.md  ux-simplification-prd.md  ux-simplification-tech-spec.md
ax-office-frontend/: jest.config.js  netlify.toml  package-lock.json  package.json  tsconfig.json
ax-services/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
axbi/: __init__.py  app.py  axbi_typing.py  config.py  constants.py  custom_database_errors.py  dataframe.py  errors.py  exceptions.py  forms.py  jinja_context.py  result_set.py  schemas.py  sql_lab.py  stats_logger.py  viz.py
docker/: .env  .env-axbi.example  .env-local.example  README.md  docker-bootstrap.sh  docker-frontend.sh  docker-healthcheck.sh  docker-init.sh  docker-pytest-entrypoint.sh
docs/: .gitignore  DOCS_CLAUDE.md  docusaurus.config.ts  eslint.config.js  package.json  recovery-2.0.x-triage.md  sidebarAdminDocs.js  sidebarComponents.js  sidebarTutorials.js  sidebars.js  tsconfig.json
qa/: README.md  conftest.py  test_upload_file_formats.py
requirements/: base.in  base.txt  development.in  development.txt
scripts/: benchmark_migration.py  cancel_github_workflows.py  change_detector.py  check-custom-rules.sh  check-env.py  check-type.js  check_axbi_branding.py  check_ignored_source_files.py  check_license.sh  ci_check_npm_lock_version.sh  cypress_run.py  docker-compose-up.sh  eslint.sh  extract_feature_flags.py  fossa.sh  generate_frontend_class_component_tasklist.js  generate_frontend_ts_tasklist.js  oxlint.sh  permissions_cleanup.py  python_tests.sh  sign.sh  tag_latest_release.sh  uv-pip-compile.sh
superset/: app.py  config.py  constants.py  dataframe.py  errors.py  exceptions.py  forms.py  jinja_context.py  legacy.py  result_set.py  sql_lab.py  stats_logger.py  superset_typing.py  viz.py
superset-core/: README.md  pyproject.toml
superset-desktop/: LOCAL_RUNTIME.md  README.md  package-lock.json  package.json
superset-desktop/src-tauri/: Cargo.toml  tauri.conf.json
superset-desktop/src-tauri/src/: deep_link.rs  local_runtime.rs  main.rs  navigation.rs  tray.rs
superset-desktop/src-tauri/src/commands/: mod.rs
superset-embedded-sdk/: README.md  package-lock.json  package.json  tsconfig.json
superset-extensions-cli/: README.md  pyproject.toml
superset-frontend/: babel.config.js  jest.config.js  package-lock.json  package.json  webpack.config.js
superset-rust/: Cargo.toml  README.md
superset-websocket/: eslint.config.js  package-lock.json  package.json
tests/: conftest.py  drag_drop_sample.csv
(+5325 files in other folders)
